# CREWAI_DEMO

./: .env  .gitignore  1_email_agent.ipynb  2_multiagent_crew.ipynb  3_multiagent_crew_with_tools.ipynb  3_multiagent_crew_with_tools_fixed.ipynb  ReadMe.MD  alternative_search_example.py  pyproject.toml  test_serpapi.py  test_serper.py
